tests/ui/traits/impl-method-mismatch.stderr
error[E0053]: method `jumbo` has an incompatible type for trait
  --> $DIR/impl-method-mismatch.rs:7:5
   |
LL |     unsafe fn jumbo(&self, x: &usize) { *self + *x; }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected normal fn, found unsafe fn
   |
note: type in trait
  --> $DIR/impl-method-mismatch.rs:2:5
   |
LL |     fn jumbo(&self, x: &usize) -> usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn(&usize, &usize) -> usize`
              found signature `unsafe fn(&usize, &usize)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
